--- a/src/main/resources/templates/account/profile.html
+++ b/src/main/resources/templates/account/profile.html
@@ -36,8 +36,8 @@
             <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
                 <a class="nav-link active" id="v-pills-intro-tab" data-toggle="pill" href="#v-pills-profile"
                    role="tab" aria-controls="v-pills-profile" aria-selected="true">intro</a>
-                <a class="nav-link" id="v-pills-study-tab" data-toggle="pill" href="#v-pills-study"
-                   role="tab" aria-controls="v-pills-study" aria-selected="false">study</a>
+                <a class="nav-link" id="v-pills-party-tab" data-toggle="pill" href="#v-pills-party"
+                   role="tab" aria-controls="v-pills-party" aria-selected="false">party</a>
             </div>
         </div>
         <div class="col-8">
@@ -71,7 +71,7 @@
                         <a class="btn btn-outline-primary" href="#" th:href="@{/settings/profile}">Update</a>
                     </div>
                 </div>
-                <div class="tab-pane fade" id="v-pills-study" role="tabpanel" aria-labelledby="v-pills-profile-tab">
+                <div class="tab-pane fade" id="v-pills-party" role="tabpanel" aria-labelledby="v-pills-profile-tab">
                     Study
                 </div>
             </div>
