--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -37,7 +37,150 @@
     </a>
 </div>
 
+<div th:fragment="party-banner" th:if="${party.useBanner}" class="row" id="party-logo">
+    <img th:src="${party.image}"/>
+</div>
 
+<div th:fragment="party-info">
+    <div class="row pt-4 text-left justify-content-center bg-light">
+        <div class="col-6">
+            <a href="#" class="text-decoration-none" th:href="@{'/party/' + ${party.path}}">
+                <span class="h2" th:text="${party.title}">Party title</span>
+            </a>
+        </div>
+        <div class="col-4 text-right justify-content-end">
+                <span th:if="${!party.published}"
+                      class="d-inline-block" tabindex="0" data-toggle="tooltip" data-placement="bottom"
+                      title="Wating for release">
+                    <button class="btn btn-primary btn-sm" style="pointer-events: none;" type="button" disabled>DRAFT</button>
+                </span>
+            <span th:if="${party.closed}"
+                  class="d-inline-block" tabindex="0" data-toggle="tooltip" data-placement="bottom" title="Party is closed now">
+                    <button class="btn btn-primary btn-sm" style="pointer-events: none;" type="button" disabled>CLOSED</button>
+                </span>
+            <span th:if="${!party.recruiting}"
+                  class="d-inline-block ml-1" tabindex="0" data-toggle="tooltip" data-placement="bottom" title="Not Recruiting">
+                    <button class="btn btn-primary btn-sm" style="pointer-events: none;" type="button" disabled>OFF</button>
+                </span>
+            <span sec:authorize="isAuthenticated()" th:if="${party.isJoinable(#authentication.principal)}"
+                  class="btn-group" role="group" aria-label="Basic example">
+                    <a class="btn btn-primary" th:href="@{'/party/' + ${party.path} + '/join'}">
+                        Join the party
+                    </a>
+                    <a class="btn btn-outline-primary" th:href="@{'/party/' + ${party.path} + '/members'}"
+                       th:text="${party.members.size()}">1</a>
+                </span>
+            <span sec:authorize="isAuthenticated()"
+                  th:if="${!party.closed && party.isMember(#authentication.principal)}" class="btn-group" role="group">
+                    <a class="btn btn-outline-warning" th:href="@{'/party/' + ${party.path} + '/leave'}">
+                        Leave the party
+                    </a>
+                    <a class="btn btn-outline-primary" th:href="@{'/party/' + ${party.path} + '/members'}"
+                       th:text="${party.members.size()}">1</a>
+                </span>
+            <span sec:authorize="isAuthenticated()"
+                  th:if="${party.published && !party.closed && party.isManager(#authentication.principal)}">
+                    <a class="btn btn-outline-primary" th:href="@{'/party/' + ${party.path} + '/new-event'}">
+                        <i class="fa fa-plus"></i> New Party
+                    </a>
+                </span>
+        </div>
+    </div>
+    <div class="row justify-content-center bg-light">
+        <div class="col-10">
+            <p class="lead" th:text="${party.shortDescription}"></p>
+        </div>
+    </div>
+    <div class="row justify-content-center bg-light">
+        <div class="col-10">
+            <p>
+                <span th:each="tag: ${party.tags}"
+                      class="font-weight-light text-monospace badge badge-pill badge-info mr-3">
+                    <a th:href="@{'/search/tag/' + ${tag.title}}" class="text-decoration-none text-white">
+                        <i class="fa fa-tag"></i> <span th:text="${tag.title}">Tag</span>
+                    </a>
+                </span>
+                <span th:each="zone: ${party.zones}" class="font-weight-light text-monospace badge badge-primary mr-3">
+                    <a th:href="@{'/search/zone/' + ${zone.id}}" class="text-decoration-none text-white">
+                        <i class="fa fa-globe"></i> <span th:text="${zone.localNameOfCity}">City</span>
+                    </a>
+                </span>
+            </p>
+        </div>
+    </div>
+</div>
 
+<div th:fragment="party-menu (partyMenu)" class="row px-3 justify-content-center bg-light">
+    <nav class="col-10 nav nav-tabs">
+        <a class="nav-item nav-link"
+           th:classappend="${partyMenu == 'info'}? active"
+           href="#"  th:href="@{'/party/' + ${party.path}}">
+            <i class="fa fa-info-circle"></i> Intro
+        </a>
+        <a class="nav-item nav-link"
+           th:classappend="${partyMenu == 'members'}? active"
+           href="#" th:href="@{'/party/' + ${party.path} + '/members'}">
+            <i class="fa fa-user"></i> Members
+        </a>
+        <a class="nav-item nav-link"
+           th:classappend="${partyMenu == 'events'}? active"
+           href="#" th:href="@{'/party/' + ${party.path} + '/events'}">
+            <i class="fa fa-calendar"></i> Party
+        </a>
+        <a sec:authorize="isAuthenticated()"
+           th:if="${party.isManager(#authentication.principal)}"
+           class="nav-item nav-link" th:classappend="${partyMenu == 'settings'}? active"
+           href="#" th:href="@{'/party/' + ${party.path} + '/settings/description'}">
+            <i class="fa fa-cog"></i> Setting
+        </a>
+    </nav>
+</div>
+
+<div th:fragment="member-list (members, isManager)" class="row px-3 justify-content-center">
+    <ul class="list-unstyled col-10">
+        <li class="media mt-3" th:each="member: ${members}">
+            <svg th:if="${#strings.isEmpty(member?.profileImage)}" th:data-jdenticon-value="${member.username}" width="64" height="64" class="rounded border bg-light mr-3"></svg>
+            <img th:if="${!#strings.isEmpty(member?.profileImage)}" th:src="${member?.profileImage}" width="64" height="64" class="rounded border mr-3"/>
+            <div class="media-body">
+                <h5 class="mt-0 mb-1"><span th:text="${member.username}"></span> <span th:if="${isManager}" class="badge badge-primary">Manager</span></h5>
+                <span th:text="${member.bio}"></span>
+            </div>
+        </li>
+    </ul>
+</div>
+
+<div th:fragment="party-settings-menu (currentMenu)" class="list-group">
+    <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'description'}? active"
+       href="#" th:href="@{'/party/' + ${party.path} + '/settings/description'}">Intro</a>
+    <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'image'}? active"
+       href="#" th:href="@{'/party/' + ${party.path} + '/settings/image'}">Banner</a>
+    <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'tags'}? active"
+       href="#" th:href="@{'/party/' + ${party.path} + '/settings/tags'}">Topic</a>
+    <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'zones'}? active"
+       href="#" th:href="@{'/party/' + ${party.path} + '/settings/zones'}">Location</a>
+    <a class="list-group-item list-group-item-action list-group-item-danger" th:classappend="${currentMenu == 'party'}? active"
+       href="#" th:href="@{'/party/' + ${party.path} + '/settings/party'}">Party</a>
+</div>
+
+<div th:fragment="message" th:if="${message}" class="alert alert-info alert-dismissible fade show mt-3" role="alert">
+    <span th:text="${message}">Complete</span>
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
+</div>
+
+<div th:fragment="editor-script">
+    <script src="/node_modules/summernote/dist/summernote-bs4.js"></script>
+    <script type="application/javascript">
+        $(function () {
+            $('#fullDescription').summernote({
+                fontNames: ['Arial', 'Arial Black', 'Comic Sans MS', 'Courier New', 'Noto Sans KR', 'Noto Sans KR'],
+                placeholder: 'Mouken!',
+                tabsize: 2,
+                height: 300
+            });
+        });
+    </script>
+</div>
 
 </html>
