--- a/src/main/resources/templates/settings/notifications.html
+++ b/src/main/resources/templates/settings/notifications.html
@@ -33,12 +33,12 @@
                             Posting
                         </div>
                         <div class="form-check form-switch">
-                            <input type="checkbox" role="switch" th:field="*{studyCreatedByEmail}" class="form-check-input" id="studyCreatedByEmail">
-                            <label class="form-check-label" for="studyCreatedByEmail">Email</label>
+                            <input type="checkbox" role="switch" th:field="*{partyCreatedByEmail}" class="form-check-input" id="partyCreatedByEmail">
+                            <label class="form-check-label" for="partyCreatedByEmail">Email</label>
                         </div>
                         <div class="form-check form-switch">
-                            <input type="checkbox" role="switch" th:field="*{studyCreatedByWeb}" class="form-check-input" id="studyCreatedByWeb" checked>
-                            <label class="form-check-label" for="studyCreatedByWeb">Web</label>
+                            <input type="checkbox" role="switch" th:field="*{partyCreatedByWeb}" class="form-check-input" id="partyCreatedByWeb" checked>
+                            <label class="form-check-label" for="partyCreatedByWeb">Web</label>
                         </div>
                     </div>
                     <div class="form-group row mt-2">
@@ -46,12 +46,12 @@
                             Enrollment
                         </div>
                         <div class="form-check form-switch">
-                            <input type="checkbox" role="switch" th:field="*{studyEnrollmentResultByEmail}" class="form-check-input" id="studyEnrollmentResultByEmil">
-                            <label class="form-check-label" for="studyEnrollmentResultByEmil">Email</label>
+                            <input type="checkbox" role="switch" th:field="*{partyEnrollmentResultByEmail}" class="form-check-input" id="partyEnrollmentResultByEmil">
+                            <label class="form-check-label" for="partyEnrollmentResultByEmil">Email</label>
                         </div>
                         <div class="form-check form-switch">
-                            <input type="checkbox" role="switch" th:field="*{studyEnrollmentResultByWeb}" class="form-check-input" id="studyEnrollmentResultByWeb" checked>
-                            <label class="form-check-label" for="studyEnrollmentResultByWeb">Web</label>
+                            <input type="checkbox" role="switch" th:field="*{partyEnrollmentResultByWeb}" class="form-check-input" id="partyEnrollmentResultByWeb" checked>
+                            <label class="form-check-label" for="partyEnrollmentResultByWeb">Web</label>
                         </div>
                     </div>
                     <div class="form-group row mt-2">
@@ -59,12 +59,12 @@
                             Group
                         </div>
                         <div class="form-check form-switch">
-                            <input type="checkbox" role="switch" th:field="*{studyUpdatedByEmail}" class="form-check-input" id="studyWatchByEmail">
-                            <label class="form-check-label" for="studyWatchByEmail">Email</label>
+                            <input type="checkbox" role="switch" th:field="*{partyUpdatedByEmail}" class="form-check-input" id="partyWatchByEmail">
+                            <label class="form-check-label" for="partyWatchByEmail">Email</label>
                         </div>
                         <div class="form-check form-switch">
-                            <input type="checkbox" role="switch" th:field="*{studyUpdatedByWeb}" class="form-check-input" id="studyWatchByWeb" checked>
-                            <label class="form-check-label" for="studyWatchByWeb">Web</label>
+                            <input type="checkbox" role="switch" th:field="*{partyUpdatedByWeb}" class="form-check-input" id="partyWatchByWeb" checked>
+                            <label class="form-check-label" for="partyWatchByWeb">Web</label>
                         </div>
                     </div>
                     <div class="form-group row mt-2">
