PARTY status, title and path update, delete

--- a/src/main/resources/templates/party/form.html
+++ b/src/main/resources/templates/party/form.html
@@ -73,6 +73,6 @@
 </div>
 
 <script th:replace="~{fragments/script.html :: form-validation}"></script>
-<script th:replace="~{fragments.html :: editor-script}"></script>
+<script th:replace="~{fragments/script.html :: editor-script}"></script>
 </body>
 </html>
