--- a/src/main/resources/templates/party/settings/description.html
+++ b/src/main/resources/templates/party/settings/description.html
@@ -54,6 +54,6 @@
 
 <footer th:replace="~{fragments/footer.html :: footer-common}"></footer>
 <script th:replace="~{fragments/script.html :: form-validation}"></script>
-<script th:replace="~{fragments.html :: editor-script}"></script>
+<script th:replace="~{fragments/script.html :: editor-script}"></script>
 </body>
 </html>
