--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -59,7 +59,7 @@
                     <button class="btn btn-primary btn-sm" style="pointer-events: none;" type="button" disabled>CLOSED</button>
                 </span>
             <span th:if="${!party.recruiting}"
-                  class="d-inline-block ml-1" tabindex="0" data-toggle="tooltip" data-placement="bottom" title="Not Recruiting">
+                  class="d-inline-block ml-1" tabindex="0" data-toggle="tooltip" data-placement="bottom" title="Not recruiting">
                     <button class="btn btn-primary btn-sm" style="pointer-events: none;" type="button" disabled>OFF</button>
                 </span>
             <span sec:authorize="isAuthenticated()" th:if="${party.isJoinable(#authentication.principal)}"
@@ -102,7 +102,7 @@
                 </span>
                 <span th:each="zone: ${party.zones}" class="font-weight-light text-monospace badge badge-primary mr-3">
                     <a th:href="@{'/search/zone/' + ${zone.id}}" class="text-decoration-none text-white">
-                        <i class="fa fa-globe"></i> <span th:text="${zone.localNameOfCity}">City</span>
+                        <i class="fa fa-globe"></i> <span th:text="${zone.city}">City</span>
                     </a>
                 </span>
             </p>
@@ -152,8 +152,8 @@
 <div th:fragment="party-settings-menu (currentMenu)" class="list-group">
     <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'description'}? active"
        href="#" th:href="@{'/party/' + ${party.path} + '/settings/description'}">Intro</a>
-    <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'image'}? active"
-       href="#" th:href="@{'/party/' + ${party.path} + '/settings/image'}">Banner</a>
+    <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'banner'}? active"
+       href="#" th:href="@{'/party/' + ${party.path} + '/settings/banner'}">Banner</a>
     <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'tags'}? active"
        href="#" th:href="@{'/party/' + ${party.path} + '/settings/tags'}">Topic</a>
     <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'zones'}? active"
@@ -169,18 +169,17 @@
     </button>
 </div>
 
-<div th:fragment="editor-script">
-    <script src="/node_modules/summernote/dist/summernote-bs4.js"></script>
-    <script type="application/javascript">
-        $(function () {
-            $('#fullDescription').summernote({
-                fontNames: ['Arial', 'Arial Black', 'Comic Sans MS', 'Courier New', 'Noto Sans KR', 'Noto Sans KR'],
-                placeholder: 'Mouken!',
-                tabsize: 2,
-                height: 300
-            });
-        });
-    </script>
+<div th:fragment="member-list (members, isManager)" class="row px-3 justify-content-center">
+    <ul class="list-unstyled col-10">
+        <li class="media mt-3" th:each="member: ${members}">
+            <svg th:if="${#strings.isEmpty(member?.profileImage)}" th:data-jdenticon-value="${member.username}" width="64" height="64" class="rounded border bg-light mr-3"></svg>
+            <img th:if="${!#strings.isEmpty(member?.profileImage)}" th:src="${member?.profileImage}" width="64" height="64" class="rounded border mr-3"/>
+            <div class="media-body">
+                <h5 class="mt-0 mb-1"><span th:text="${member.username}"></span> <span th:if="${isManager}" class="badge badge-primary">Manager</span></h5>
+                <span th:text="${member.bio}"></span>
+            </div>
+        </li>
+    </ul>
 </div>
 
 </html>
