--- a/src/main/resources/templates/party/settings/tags.html
+++ b/src/main/resources/templates/party/settings/tags.html
@@ -1,34 +1,33 @@
 <!DOCTYPE html>
-<html lang="en"
-      xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{fragments/head.html :: head-title-links(~{::title}, ~{::link})}">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="~{fragments/head.html :: head-title(~{::title})}">
     <title>index</title>
-    <link rel="stylesheet" th:href="@{/css/tagify.css}">
 </head>
 <body>
 <header th:replace="~{fragments/header.html :: header-common}"></header>
+<div th:replace="fragments.html :: party-banner"></div>
 
 <div class="container">
-    <div class="row mt-5 justify-content-center">
-        <div class="col-2"><!-- menu -->
-            <div th:replace="fragments.html :: settings-menu(currentMenu='tags')"></div>
-        </div>
+    <div th:replace="fragments.html :: party-info"></div>
+    <div th:replace="fragments.html :: party-menu(partyMenu='tags')"></div>
 
+    <div class="row mt-3 justify-content-center">
+
+        <div class="col-2">
+            <div th:replace="fragments.html :: party-settings-menu(currentMenu='tags')"></div>
+        </div>
         <div class="col-8">
             <div class="row">
-                <!-- title -->
-                <h2 class="col-12">Tags</h2>
+                <h2 class="col-sm-12">Tags</h2>
             </div>
             <div class="row">
-                <div class="col-12">
-                    <!-- description -->
+                <div class="col-sm-12">
                     <div class="alert alert-info" role="alert">
                         You can add a tag with comma or enter key.
                     </div>
-                    <!-- function -->
                     <div id="whitelist" th:text="${whitelist}" hidden></div>
                     <input id="tags" type="text" name="tags" th:value="${#strings.listJoin(tags, ',')}"
-                           class="tagify-outside" aria-describedby="tagHelp"/>
+                           class="tagify-outside" aria-describedby="tagHelp">
                 </div>
             </div>
         </div>
@@ -37,8 +36,6 @@
 
 <footer th:replace="~{fragments/footer.html :: footer-common}"></footer>
 <script th:replace="~{fragments/script.html :: ajax-csrf-header}"></script>
-<script th:replace="~{fragments/script.html :: update-tags(baseUrl='/settings/tags')}"></script>
-
-
+<script th:replace="~{fragments/script.html :: update-tags(baseUrl='/party/' + ${party.path} + '/settings/tags')}"></script>
 </body>
 </html>
