--- a/src/main/resources/templates/party/view.html
+++ b/src/main/resources/templates/party/view.html
@@ -19,11 +19,6 @@
 </div>
 
 <footer th:replace="~{fragments/footer.html :: footer-common}"></footer>
-
-<script type="application/javascript">
-    $(function () {
-        $('[data-toggle="tooltip"]').tooltip()
-    })
-</script>
+<script th:replace="~{fragments/script.html :: tooltip}"></script>
 </body>
 </html>
