--- a/src/main/resources/templates/settings/zones.html
+++ b/src/main/resources/templates/settings/zones.html
@@ -27,7 +27,7 @@
                     </div>
                     <!-- function -->
                     <div id="whitelist" th:text="${whitelist}" hidden></div>
-                    <input id="tags" type="text" name="tags" th:value="${#strings.listJoin(zones, ',')}"
+                    <input id="zones" type="text" name="zones" th:value="${#strings.listJoin(zones, ',')}"
                            class="tagify-outside" aria-describedby="tagHelp"/>
                 </div>
             </div>
@@ -36,53 +36,7 @@
 </div>
 
 <footer th:replace="~{fragments/footer.html :: footer-common}"></footer>
-<script src="/node_modules/@yaireo/tagify/dist/tagify.min.js"></script>
 <script th:replace="~{fragments/script.html :: ajax-csrf-header}"></script>
-<script type="application/javascript">
-    $(function () {
-        function tagRequest(url, zoneName) {
-            $.ajax({
-                dataType: "json",
-                autocomplete: {
-                    enabled: true,
-                    rightKey: true,
-                },
-                contentType: "application/json; charset=utf-8",
-                method: "POST",
-                url: "/settings/zones" + url,
-                data: JSON.stringify({'zoneName': zoneName})
-            }).done(function (data, status) {
-                console.log("${data} and status is ${status}");
-            });
-        }
-
-        function onAdd(e) {
-            tagRequest("/add", e.detail.data.value);
-        }
-
-        function onRemove(e) {
-            tagRequest("/remove", e.detail.data.value);
-        }
-
-        var tagInput = document.querySelector("#tags");
-
-        var tagify = new Tagify(tagInput, {
-            enforceWhitelist: true,
-            whitelist: JSON.parse(document.querySelector("#whitelist").textContent),
-            dropdown : {
-                enabled: 1, // suggest tags after a single character input
-            } // map tags
-        });
-
-        tagify.on("add", onAdd);
-        tagify.on("remove", onRemove);
-
-        // add a class to Tagify's input element
-        tagify.DOM.input.classList.add('form-control');
-        // re-place Tagify's input element outside of the  element (tagify.DOM.scope), just before it
-        tagify.DOM.scope.parentNode.insertBefore(tagify.DOM.input, tagify.DOM.scope);
-    });
-</script>
-
+<script th:replace="~{fragments/script.html :: update-zones(baseUrl='/settings/zones')}"></script>
 </body>
 </html>
