--- a/src/main/resources/templates/fragments/script.html
+++ b/src/main/resources/templates/fragments/script.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<body>
+<body class="bg-light">
 
     <script th:fragment="form-validation" type="application/javascript" >
         (function () {
@@ -48,7 +48,7 @@
         <script src="/node_modules/summernote/dist/summernote-bs4.js"></script>
         <script type="application/javascript">
             $(function () {
-                $('#fullDescription').summernote({
+                $('.editor').summernote({
                     fontNames: ['Arial', 'Arial Black', 'Comic Sans MS', 'Courier New', 'Noto Sans KR', 'Noto Sans KR'],
                     placeholder: 'Mouken!',
                     tabsize: 2,
@@ -150,6 +150,36 @@
                 // re-place Tagify's input element outside of the  element (tagify.DOM.scope), just before it
                 tagify.DOM.scope.parentNode.insertBefore(tagify.DOM.input, tagify.DOM.scope);
             });
+        </script>
+    </div>
+
+    <div th:fragment="date-time">
+        <script src="/node_modules/moment/min/moment-with-locales.min.js"></script>
+        <script type="application/javascript">
+            $(function () {
+                moment.locale('ko');
+                $(".date-time").text(function(index, dateTime) {
+                    return moment(dateTime, "YYYY-MM-DD`T`hh:mm").format('LLL');
+                });
+                $(".date").text(function(index, dateTime) {
+                    return moment(dateTime, "YYYY-MM-DD`T`hh:mm").format('LL');
+                });
+                $(".weekday").text(function(index, dateTime) {
+                    return moment(dateTime, "YYYY-MM-DD`T`hh:mm").format('dddd');
+                });
+                $(".time").text(function(index, dateTime) {
+                    return moment(dateTime, "YYYY-MM-DD`T`hh:mm").format('LT');
+                });
+                $(".calendar").text(function(index, dateTime) {
+                    return moment(dateTime, "YYYY-MM-DD`T`hh:mm").calendar();
+                });
+                $(".fromNow").text(function(index, dateTime) {
+                    return moment(dateTime, "YYYY-MM-DD`T`hh:mm").fromNow();
+                });
+                $(".date-weekday-time").text(function(index, dateTime) {
+                    return moment(dateTime, "YYYY-MM-DD`T`hh:mm").format('LLLL');
+                });
+            })
         </script>
     </div>
 </body>
