--- a/src/main/resources/templates/mail/simple-link.html
+++ b/src/main/resources/templates/mail/simple-link.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Mouken</title>
 </head>
-<body>
+<body class="bg-light">
 <div>
     <p>Hello <span th:text="${username}"></span>.</p>
     <h6 th:text="${message}">message</h6>
