--- a/src/main/resources/templates/party/settings/banner.html
+++ b/src/main/resources/templates/party/settings/banner.html
@@ -3,7 +3,7 @@
 <head th:replace="~{fragments/head.html :: head-title(~{::title})}">
     <title>index</title>
 </head>
-<body>
+<body class="bg-light">
 <header th:replace="~{fragments/header.html :: header-common}"></header>
 <div th:replace="fragments.html :: party-banner"></div>
 
