--- a/src/main/resources/templates/settings/tags.html
+++ b/src/main/resources/templates/settings/tags.html
@@ -5,7 +5,7 @@
     <title>index</title>
     <link rel="stylesheet" th:href="@{/css/tagify.css}">
 </head>
-<body>
+<body class="bg-light">
 <header th:replace="~{fragments/header.html :: header-common}"></header>
 
 <div class="container">
