--- a/src/main/resources/templates/account/email-login.html
+++ b/src/main/resources/templates/account/email-login.html
@@ -5,7 +5,7 @@
     <title>index</title>
 </head>
 
-<body>
+<body class="bg-light">
 <header th:replace="~{fragments/header.html :: header-common}"></header>
 
 <div class="container">
