--- a/src/main/resources/templates/account/send-email-login-link.html
+++ b/src/main/resources/templates/account/send-email-login-link.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" th:href="@{/css/sign-in.css}" />
 </head>
 
-<body>
+<body class="bg-light">
 <header th:replace="~{fragments/header.html :: header-common}"></header>
 
 <main class="form-signin text-center w-100 m-auto">
