--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<body>
+<body class="bg-light">
 
 <header th:fragment="header-common" class="navbar navbar-expand-md navbar-dark bd-navbar" style="background-color: #e3f2fd;">
     <nav class="container-xxl flex-wrap flex-md-nowrap" aria-label="Main navigation">
