--- a/src/main/resources/templates/party/settings/description.html
+++ b/src/main/resources/templates/party/settings/description.html
@@ -3,7 +3,7 @@
 <head th:replace="~{fragments/head.html :: head-title(~{::title})}">
     <title>index</title>
 </head>
-<body>
+<body class="bg-light">
 <header th:replace="~{fragments/header.html :: header-common}"></header>
 <div th:replace="fragments.html :: party-banner"></div>
 
@@ -34,7 +34,7 @@
 
                 <div class="form-group">
                     <label for="fullDescription">Description</label>
-                    <textarea id="fullDescription" type="textarea" th:field="*{fullDescription}" class="form-control"
+                    <textarea id="fullDescription" type="textarea" th:field="*{fullDescription}" class="form-control editor"
                               placeholder="Please explain about your party." aria-describedby="fullDescriptionHelp" required></textarea>
                     <!--<small id="fullDescriptionHelp" class="form-text text-muted">
                         스터디의 목표, 일정, 진행 방식, 사용할 교재 또는 인터넷 강좌 그리고 모집중인 스터디원 등 스터디에 대해 자세히 적어 주세요.
