--- a/src/main/resources/templates/party/view.html
+++ b/src/main/resources/templates/party/view.html
@@ -5,7 +5,7 @@
     <title>index</title>
 </head>
 
-<body>
+<body class="bg-light">
 <header th:replace="~{fragments/header.html :: header-common}"></header>
 <div th:replace="fragments.html :: party-banner"></div>
 
