--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,13 +17,26 @@
         <a href="#" th:href="@{/check-email}" class="alert-link">Please check your email to confirm.</a>
     </div>
 
-    <div class="py-5 text-center">
-        <h2>HELLO</h2>
+    <section class="jumbotron text-center">
+        <div class="container">
+            <h1>Mouken</h1>
+            <p class="lead text-muted">
+                Contents<br/>
+            </p>
+            <p>
+                <a th:href="@{/sign-up}" class="btn btn-primary my-2">Create account</a>
+            </p>
+        </div>
+    </section>
+    
+    <div class="row justify-content-center pt-3">
+        <div th:replace="fragments.html :: party-list (partyList=${partyList})"></div>
     </div>
 
 </div>
 
 <footer th:replace="~{fragments/footer.html :: footer-common}"></footer>
+<div th:replace="~{fragments/script.html :: date-time}"></div>
 </body>
 
 </html>
