--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,7 +19,7 @@
 
     <section class="jumbotron text-center">
         <div class="container">
-            <h1>Mouken</h1>
+            <h1 th:text="Welcome">Mouken</h1>
             <p class="lead text-muted">
                 Contents<br/>
             </p>
