--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -282,9 +282,9 @@
                             </div>-->
                             <small class="text-muted">
                                 <i class="fa fa-user-circle"></i>
-                                <span th:text="${party.memberCount}"></span>members
+                                <span th:text="${party.memberCount}"></span>
                             </small>
-                            <small class="text-muted" th:text="${party.publishedDateTime}">3 mins</small>
+                            <small class="text-muted date" th:text="${party.publishedDateTime}">3 mins</small>
                         </div>
                     </div>
                 </div>
