--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -268,6 +268,9 @@
                     <img th:src="${party.image}" class="card-img-top" th:alt="${party.title}" >
                     <!--{{< placeholder width="100%" height="225" background="#55595c" color="#eceeef" class="card-img-top" text="Thumbnail" >}}-->
                     <div class="card-body">
+                        <a th:href="@{'/party/' + ${party.path}}" class="text-decoration-none">
+                            <h5 class="card-title context" th:text="${party.title}"></h5>
+                        </a>
                         <p class="card-text" th:text="${party.shortDescription}">Short description</p>
                         <p class="card-text context">
                             <span th:each="tag: ${party.tags}" class="font-weight-light text-monospace badge badge-pill badge-info mr-3">
